# index-optimizer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  index_optimizer_report.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
data/: tickers.csv
opt/: constraints.py  optimizer.py
opt/tests/: constraints_test.py  optimizer_test.py
