[metadata]
name = opt
version = attr: opt.__version__

[options]
packages = find:
install_requires =
    cvxopt == 1.3.2
    numpy == 1.25.2
    pandas == 2.0.3

[flake8]
ignore = W504
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
max-complexity = 10
max-line-length = 88

[tool:pytest]
addopts = -s -ra -v
testpaths =
    tests
